...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ReT-d1-ySH">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="33"/>
                                        <accessibility key="accessibilityConfiguration" identifier="IsFriday"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                        <state key="normal" title="Is it Friday?">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qg-i3-Lws">
                                        <rect key="frame" x="0.0" y="53" width="374" height="33"/>
                                        <accessibility key="accessibilityConfiguration" identifier="IsBirthday"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                        <state key="normal" title="Is it my Birthday?">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pNJ-RK-jz2">
                                        <rect key="frame" x="0.0" y="106" width="374" height="33"/>
                                        <accessibility key="accessibilityConfiguration" identifier="IsDayOff"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                        <state key="normal" title="Is it a day off?">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQH-6u-MrL">
                                        <rect key="frame" x="0.0" y="159" width="374" height="33"/>
                                        <accessibility key="accessibilityConfiguration" identifier="IsNiceDay"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                        <state key="normal" title="Is it a nice day Today?">
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Is it" largeTitleDisplayMode="always" id="Xwm-11-W1s"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2WS-BB-45Z">
                                        <rect key="frame" x="0.0" y="114.5" width="374" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="IsBirthdayTodayBtn"/>
                                        <state key="normal" title="Is Today really my Birthday?"/>
                                        <connections>
...
                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="81Y-ck-w6l">
                                        <rect key="frame" x="-2" y="60.5" width="378" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="MoodSlider"/>
                                        <color key="minimumTrackTintColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <connections>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Like every other day" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nFb-FG-Ga6">
                                        <rect key="frame" x="0.0" y="130.5" width="374" height="14.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="MoodLabel"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                        <nil key="textColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fVH-Ur-kri">
                                <rect key="frame" x="189.5" y="458.5" width="35.5" height="33.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="IsFridayLabel"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <nil key="textColor"/>
...
