...

        do {
            if try isTodayBirthday(stringDate) {
                alertTitle = "Woah, yes! Happy Birthday!"
                buttonTitle = "Thanks!"
            } else {
                alertTitle = "Haha, you wish, Today is not your birthday and you know it!"
                buttonTitle = "Ahh, right"
            }
        } catch {
            switch(error) {
            case BirthdayError.futureDate:
                alertTitle = "Such a date has not yet come"
                buttonTitle = "OK"
...
